--- a/radAR2/app/src/main/res/layout/activity_friends.xml
+++ b/radAR2/app/src/main/res/layout/activity_friends.xml
@@ -8,19 +8,6 @@
     android:theme="@android:style/Theme.NoTitleBar"
     tools:context="radar.radar.FriendsActivity">
 
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="?attr/colorPrimary" />-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
-
-    <!--TODO refactor to content.xml-->
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="508dp"
@@ -34,7 +21,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@android:drawable/ic_menu_search" />
+        android:src="@drawable/ic_add_black_24dp" />
 
 
 
