--- a/radAR2/app/src/main/res/menu/home_screen.xml
+++ b/radAR2/app/src/main/res/menu/home_screen.xml
@@ -2,8 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/app_bar_search"
+        android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="100"
+        android:title="Search"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="101"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
 </menu>
