--- a/radAR2/app/src/main/res/values/colors.xml
+++ b/radAR2/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="accent_material_light_2">#304ffe</color>
     <color name="text_color_primary">#ffffff</color>
     <color name="foreground_material_light">#e8e8e8</color>
+    <color name="gray">#9E9E9E</color>
 </resources>
