--- a/radAR2/app/src/main/res/layout/activity_user_detail.xml
+++ b/radAR2/app/src/main/res/layout/activity_user_detail.xml
@@ -49,7 +49,8 @@
                         android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintTop_toTopOf="parent"
+                        >
 
                         <ImageView
                             android:id="@+id/userAddFriend"
@@ -59,7 +60,8 @@
                             android:contentDescription="@string/trackuser"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
-                            android:clickable="true" />
+                            android:clickable="true"
+                            app:srcCompat="@drawable/ic_person_add_white_48dp"/>
 
                         <ImageView
                             android:id="@+id/userTrack"
@@ -69,7 +71,8 @@
                             android:contentDescription="@string/trackuser"
                             android:paddingLeft="5dp"
                             android:paddingRight="5dp"
-                            android:clickable="true" />
+                            android:clickable="true"
+                            app:srcCompat="@drawable/ic_my_location_white_36dp"/>
                     </LinearLayout>
 
                 </android.support.constraint.ConstraintLayout>
@@ -229,19 +232,6 @@
 
 
     </android.support.v4.widget.NestedScrollView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_add"
-        android:layout_width="45dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:padding="5dp"
-        android:src="@drawable/ic_add_black_24dp"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="right|top"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="166dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_message"
