--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -1,51 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+android:orientation="vertical" android:layout_width="match_parent"
+android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/row_profile_picture"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/img"
-        android:contentDescription="Profile picture"
-        android:src="@mipmap/ic_launcher" />
+<android.support.v7.widget.CardView
+    android:id="@+id/cardView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp">
 
     <RelativeLayout
+        android:padding="8dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        >
+
+        <!--We can add content of the cardview here -->
+        <ImageView
+            android:id="@+id/row_profile_picture"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/img"
+            android:contentDescription="Profile picture"
+            android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:orientation="vertical"
-            android:id="@+id/linearLayout"
-            android:layout_marginBottom="5dp">
+            android:orientation="horizontal"
+            android:id="@+id/row_search_name"
+            android:layout_toRightOf="@+id/row_profile_picture"
+            android:layout_marginLeft="5dp">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/row_chat_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/row_chat_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:text="Chat name"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-
+                android:layout_alignParentStart="true"
+                android:text="Name"
+                android:layout_marginTop="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
 
         </LinearLayout>
+
+
     </RelativeLayout>
+
+</android.support.v7.widget.CardView>
 
 </LinearLayout>
