--- a/radAR2/app/src/main/res/layout/activity_ar2.xml
+++ b/radAR2/app/src/main/res/layout/activity_ar2.xml
@@ -21,22 +21,67 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Heading" />
+
+            <TextView
+                android:id="@+id/HUD_heading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/HUD_distance_to_dest"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="200m"
-                android:textAlignment="center"
-                android:textSize="48dp" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/HUD_distance_to_dest"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="200m"
+                        android:textAlignment="center"
+                        android:textSize="48dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="to your " />
+
+                    <TextView
+                        android:id="@+id/HUD_relative_compass_direction"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="west" />
+
+                </LinearLayout>
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/HUD_destination_name"
