--- a/radAR2/app/src/main/res/layout/fragment_group_details.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_details.xml
@@ -17,7 +17,7 @@
             android:id="@+id/main.collapsing"
             android:minHeight="0dp"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="120dp"
 
             android:fitsSystemWindows="true"
             app:expandedTitleMarginStart="48dp"
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:paddingLeft="32dp"
+                android:paddingBottom="24dp"
                 android:textSize="48dp" />
 
             <!--<ImageView-->
@@ -85,9 +86,11 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/group_details_fab"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_chat_white_24dp"
         app:layout_anchor="@id/main.appbar"
         app:layout_anchorGravity="bottom|right|end"
         />
