--- a/radAR2/app/src/main/res/menu/drawer_common.xml
+++ b/radAR2/app/src/main/res/menu/drawer_common.xml
@@ -5,10 +5,10 @@
 
     <group android:checkableBehavior="none"
         android:id="@+id/navdrawer_top">
-        <item
-            android:id="@+id/nav_maps"
-            android:icon="@drawable/ic_map_black_48dp"
-            android:title="Map View" />
+        <!--<item-->
+            <!--android:id="@+id/nav_maps"-->
+            <!--android:icon="@drawable/ic_map_black_48dp"-->
+            <!--android:title="Map View" />-->
         <item
             android:id="@+id/nav_chats"
             android:icon="@drawable/ic_chat_black_48dp"
