--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -1,47 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/recyclerView_padding_small"
-    android:paddingRight="@dimen/recyclerView_padding_small"
-    android:paddingTop="@dimen/row_padding_small"
-    android:paddingBottom="@dimen/row_padding_small"
 
-    android:background="@color/colorWhite">
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/row_search_name"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_centerVertical="true"
+android:orientation="vertical">
 
-    <!--We can add content of the cardview here -->
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/row_profile_picture"
         android:layout_width="@dimen/group_img_size"
         android:layout_height="@dimen/group_img_size"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="Profile picture"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:id="@+id/row_search_name"
-        android:layout_toEndOf="@+id/row_profile_picture"
-        android:layout_marginStart="8dp">
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/row_profile_picture"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/row_chat_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/is_tracking_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/tracking_group"
+                android:textColor="@color/colorAccent"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/is_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/chat"
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/row_chat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
-            android:layout_marginBottom="2dp"
+            android:layout_marginStart="16dp"
+            android:text="@string/name"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/name_font_size" />
+            android:textSize="@dimen/name_font_size"
+            app:layout_constraintStart_toEndOf="@+id/row_profile_picture"
+            tools:layout_editor_absoluteY="8dp" />
 
         <LinearLayout
-            android:layout_marginTop="2dp"
-            android:layout_width="wrap_content"
+            android:id="@+id/linearLayout8"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toEndOf="@+id/row_profile_picture"
+            app:layout_constraintTop_toBottomOf="@+id/row_chat_name">
 
             <TextView
                 android:id="@+id/row_last_message_from"
@@ -53,13 +97,13 @@
                 android:id="@+id/row_last_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/darker_gray"
-            />
+                android:textColor="@android:color/darker_gray" />
         </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
-    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
 
 
-</RelativeLayout>
 
 
