--- a/radAR2/app/src/main/res/values/colors.xml
+++ b/radAR2/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#01579b</color>
     <color name="colorPrimaryDark">#1a237e</color>
     <color name="colorAccent">#ffb300</color>
+    <color name="colorAccentDark">#DB9A00</color>
+    <color name="colorAccentMid">#DEBA2F</color>
+    <color name="colorAccentLight">#DEBC00</color>
     <color name="colorSuperAppBar">#237ccf</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
